--- a/gameOvert.html
+++ b/gameOvert.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pantalla inicio</h1>
-    <a href="instruccion.html">iniciar</a>
+    <h1>Game Over</h1>
+    <a href="index.html">reiniciar</a>
 </body>
 </html>
