--- a/instruccion.html
+++ b/instruccion.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pantalla inicio</h1>
-    <a href="instruccion.html">iniciar</a>
+    <h1>Instruccion</h1>
+    <a href="game.html">click</a>
 </body>
 </html>
