add page game over

--- a/game.html
+++ b/game.html
@@ -27,6 +27,7 @@
     <div class="container-button">
         <button>seleccionar</button>
     </div>
+    <a href="gameOver.html"></a>
     <script src="app.js"></script>
 </body>
 </html>
