--- a/instruccion.html
+++ b/instruccion.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Instruccion</h1>
+    <div>
+        <p>
+            En un mundo controlado por los gatos matematicos, los perritos son torturados hasta el fin para entrenarlos en el sutil arte de las matematicas con BINARIOS.
+            Tu mision sera ayudar a los perritos a alcanzar la libertad moviendo los switches para hacer coincidir el numero en decimal con el binario.
+        </p>
+    </div>
+    <a href="tutorial.html">Ir a tutorial</a>
     <a href="game.html">saltar</a>
 </body>
 </html>
