--- a/game.html
+++ b/game.html
@@ -27,7 +27,8 @@
     <div class="container-button">
         <button>seleccionar</button>
     </div>
-    <a href="gameOver.html"></a>
+    <a class="gameOver" href="gameOver.html"></a>
+    <a class="ganaste" href="ganaste.html"></a>
     <script src="app.js"></script>
 </body>
 </html>
