--- a/ganaste.html
+++ b/ganaste.html
@@ -8,5 +8,12 @@
 <body>
     <h1>Ganaste</h1>
     <a href="index.html">al inicio</a>
+    <h3>Creditos</h3>
+    <p>Arte Visual</p>
+    <p>Paola Salamanca AKA Paolette</p>
+    <p>Musica</p>
+    <p>Juan Felipe Naranjo</p>
+    <p>Programacion & Diseño</p>
+    <p>Hache 3,14</p>
 </body>
 </html>
