add second canvas

--- a/game.html
+++ b/game.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <canvas id="my-canvas"></canvas>
+    <canvas id="paredesCanvas"></canvas>
+    
     <div class="container-binary">
         <div id="binary" class="treintaydos">off</div>
         <div id="binary" class="dieciseis">off</div>
