--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>pantalla inicio</h1>
+    <p>aqui va la imagen</p>
     <a href="instruccion.html">iniciar</a>
 </body>
 </html>
