--- a/tutorial.html
+++ b/tutorial.html
@@ -3,8 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>4D4H</title>
+    <style>
+        html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+#my-canvas{
+    border: 1px solid red;
+    /* position: absolute; */
+}
+
+.container-binary{
+    border: 1px solid red;
+    width: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
+#binary{
+    border: 1px solid green;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 30px;
+}
+
+.numero{
+    width: 50px;
+    text-align: center;
+}
+
+.container-button{
+    border: 1px solid blue;
+    width: 700px;
+    text-align: center;
+}
+    </style>
 </head>
 <body>
     <canvas id="my-canvas"></canvas>
