--- a/game.html
+++ b/game.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="style.css">
     <title>4D4H</title>
 </head>
@@ -29,6 +34,7 @@
     <div class="container-button">
         <button>seleccionar</button>
     </div>
+    <img src="Assets/perroMov.gif" alt="">
     <a class="gameOver" href="gameOver.html"></a>
     <a class="ganaste" href="ganaste.html"></a>
     <script src="app.js"></script>
