--- a/instruccion.html
+++ b/instruccion.html
@@ -3,6 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        .silkscreen-regular {
+            font-family: "Silkscreen", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+  
+        .silkscreen-bold {
+            font-family: "Silkscreen", sans-serif;
+            font-weight: 700;
+            font-style: normal;
+        }
+        html{
+            font-family: "Silkscreen", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
@@ -12,6 +34,10 @@
             En un mundo controlado por los gatos matematicos, los perritos son torturados hasta el fin para entrenarlos en el sutil arte de las matematicas con BINARIOS.
             Tu mision sera ayudar a los perritos a alcanzar la libertad moviendo los switches para hacer coincidir el numero en decimal con el binario.
         </p>
+        <p>
+            Los gatos malvados a primera vista son los despreciables, pero todo tiene una muy buena razon: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus aliquam maiores ut voluptates corrupti est beatae deserunt asperiores esse dolores consectetur consequatur neque libero temporibus, debitis, optio quasi aperiam quos?
+        </p>
+
     </div>
     <a href="tutorial.html">Ir a tutorial</a>
     <a href="game.html">saltar</a>
