--- a/gameOver.html
+++ b/gameOver.html
@@ -25,6 +25,17 @@
             font-weight: 400;
             font-style: normal;
         }
+
+        h1{
+            text-align: center;
+        }
+
+        a{
+            text-decoration: none;
+            text-align: center;
+            display: block;
+            color: green;
+        }
     </style>
     <title>Document</title>
 </head>
