--- a/ganaste.html
+++ b/ganaste.html
@@ -25,18 +25,42 @@
             font-weight: 400;
             font-style: normal;
         }
+
+        a{
+            text-decoration: none;
+            color: green;
+        }
+
+        .contenedor{
+            text-align: center;
+        }
+
+        p{
+            color: green;
+        }
+
+        hr{
+            width: 50px;
+        }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <h1>Ganaste</h1>
-    <a href="index.html">al inicio</a>
-    <h3>Creditos</h3>
-    <p>Arte Visual</p>
-    <p>Paola Salamanca AKA Paolette</p>
-    <p>Musica</p>
-    <p>Juan Felipe Naranjo</p>
-    <p>Programacion & Diseño</p>
-    <p>Hache 3,14</p>
+    <div class="contenedor">
+        <h1>Ganaste</h1>
+        
+        <img src="Assets/perroMov.gif" alt="">
+        <h2>Creditos</h2>
+        <hr>
+        <h3>Arte Visual</h3>
+        <p>Paolette</p>
+        <h3>Musica</h3>
+        <p>Juan Felipe Naranjo</p>
+        <h3>Programación & Diseño</h3>
+        <p>Hache 3,14</p>
+        <hr>
+        <br>
+        <a href="index.html">al inicio</a>
+    </div>
 </body>
 </html>
