--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
         <div id="binary" class="dos">off</div>
         <div id="binary" class="uno">off</div>
     </div>
-    <div class="container-binary">
+    <div class="container-number">
         <div class="numero">32</div>
         <div class="numero">16</div>
         <div class="numero">8</div>
@@ -34,7 +34,6 @@
     <div class="container-button">
         <button>seleccionar</button>
     </div>
-    <img src="Assets/perroMov.gif" alt="">
     <a class="gameOver" href="gameOver.html"></a>
     <a class="ganaste" href="ganaste.html"></a>
     <script src="app.js"></script>
