--- a/index.html
+++ b/index.html
@@ -25,11 +25,45 @@
             font-weight: 400;
             font-style: normal;
         }
+
+        body{
+            background-color: #000;
+        }
+
+        h1{
+            text-align: center;
+            color: green;
+            border: 10px solid rgb(7, 163, 7);
+            border-radius: 25px;
+        }
+
+        /* .envoltorio{
+            border: 100px solid black;
+            border-radius: 25px;
+        } */
+
+        a{
+            text-decoration: none;
+            color: green;
+            text-align: center;
+            display: block;
+        }
+
+        img{
+            /* border: 1px solid white; */
+            display: block;
+            text-align: center;
+            margin: 0 auto;
+            width: 700px;
+        }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <h1>pantalla inicio</h1>
+    <div class="envoltorio">
+        <h1>Binary Death</h1>
+    </div>
+    <img src="Assets/gatoSlime.png" alt="">
     <p>aqui va la imagen y mas</p>
     <a href="instruccion.html">iniciar</a>
 </body>
