--- a/instruccion.html
+++ b/instruccion.html
@@ -24,22 +24,38 @@
             font-weight: 400;
             font-style: normal;
         }
+
+        a{
+            text-decoration: none;
+            color: green;
+        }
+
+        .link-intruccion{
+            display: flex;
+            justify-content: space-evenly;
+        }
+
+        h1{
+            text-align: center;
+        }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <h1>Instruccion</h1>
+    <h1>Aviso Importante</h1>
     <div>
         <p>
-            En un mundo controlado por los gatos matematicos, los perritos son torturados hasta el fin para entrenarlos en el sutil arte de las matematicas con BINARIOS.
-            Tu mision sera ayudar a los perritos a alcanzar la libertad moviendo los switches para hacer coincidir el numero en decimal con el binario.
+            En un mundo controlado por los gatos matemáticos, los perritos son torturados hasta el fin para entrenarlos en el sutil arte de las matemáticas con BINARIOS.
+            Tu misión será ayudar a los perritos a alcanzar la libertad moviendo los switches para hacer coincidir el  número en decimal con el binario.
         </p>
         <p>
             Los gatos malvados a primera vista son los despreciables, pero todo tiene una muy buena razon: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus aliquam maiores ut voluptates corrupti est beatae deserunt asperiores esse dolores consectetur consequatur neque libero temporibus, debitis, optio quasi aperiam quos?
         </p>
 
     </div>
-    <a href="tutorial.html">Ir a tutorial</a>
-    <a href="game.html">saltar</a>
+    <div class="link-intruccion"> 
+        <a href="tutorial.html">Ir a tutorial</a>
+        <a href="game.html">saltar</a>
+    </div>
 </body>
 </html>
