--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             color: green;
             text-align: center;
             display: block;
+
+            border: 5px solid rgb(7, 163, 7);
+            border-radius: 25px;
+            width: 200px;
+            margin: 0 auto;
         }
 
         img{
@@ -65,6 +70,7 @@
     </div>
     <img src="Assets/gatoSlime.png" alt="">
     <p>aqui va la imagen y mas</p>
+    <div></div>
     <a href="instruccion.html">iniciar</a>
 </body>
 </html>
