add link image fondo in tutorial

--- a/tutorial.html
+++ b/tutorial.html
@@ -147,6 +147,10 @@ canvas.height = window.innerHeight;
 canvas.width = 700;
 canvas.height = 500;
 
+// Enemy
+const fondo = new Image();
+fondo.src = "Assets/Fondo72.png";
+
 class Enemy{
     constructor(){
         this.x = 10;
