add slime high resolution

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             display: block;
             text-align: center;
             margin: 0 auto;
-            width: 700px;
+            width: 400px;
         }
     </style>
     <title>Document</title>
@@ -68,7 +68,7 @@
     <div class="envoltorio">
         <h1>Binary Death</h1>
     </div>
-    <img src="Assets/gatoSlime.png" alt="">
+    <img src="Assets/gatoSlime300.png" alt="">
     <p>aqui va la imagen y mas</p>
     <div></div>
     <a href="instruccion.html">iniciar</a>
