add graphic assets

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             display: block;
             text-align: center;
             margin: 0 auto;
-            width: 400px;
+            width: 600px;
+        }
+
+        .switche{
+            color: white;
         }
     </style>
     <title>Document</title>
@@ -69,8 +73,9 @@
         <h1>Binary Death</h1>
     </div>
     <img src="Assets/gatoSlime300.png" alt="">
-    <p>aqui va la imagen y mas</p>
-    <div></div>
+    <!-- <div class="switche">off</div> -->
+    <audio src="Sonido/menuDeInicioVer1.mp3" loop autoplay></audio>
     <a href="instruccion.html">iniciar</a>
+
 </body>
 </html>
