--- a/tutorial.html
+++ b/tutorial.html
@@ -148,8 +148,11 @@ canvas.width = 700;
 canvas.height = 500;
 
 // Imagenes
+const barra = new Image();
+barra.src = "Assets/Barra.png";
+
 const fondo = new Image();
-fondo.src = "Assets/Fondo72.png";
+fondo.src = "Assets/fondo300.png";
 
 const perritoMira = new Image();
 perritoMira.src = "Assets/perritoMira.png";
@@ -192,8 +195,8 @@ class Enemy{
         ctx.drawImage(fondo,
             0,
             0,
-            300,
-            214,
+            900,
+            642,
             0,
             0,
             canvas.width, 
@@ -202,6 +205,16 @@ class Enemy{
         // Pared movil
         ctx.strokeStyle = "blueViolet";
         ctx.strokeRect(this.x, this.y, 45, 400);
+        ctx.drawImage(barra,
+            0,
+            0,
+            302,
+            1284,
+            this.x,
+            this.y,
+            85,
+            400
+        );
 
         // punto de respaw
         this.signalX = spawn;
@@ -219,9 +232,16 @@ class Enemy{
         ctx.strokeRect(550, 350, 50, 50);
 
         // numero en decimal
-        ctx.font = `30px ${fuente}`
-        ctx.textAlign = "center"
-        ctx.fillText(this.randomValue, this.x+20, this.y + 200);
+        ctx.font = `30px ${fuente}`;
+        ctx.textAlign = "center";
+        ctx.fillStyle = "#09250f";
+        ctx.fillText(this.randomValue, this.x+26, this.y + 200);
+        ctx.fillStyle = "#8cff00";
+        ctx.fillText("_", this.x+26, this.y + 205);
+        ctx.strokeStyle = "#000";
+        ctx.strokeText("_", this.x+29, this.y + 205);
+        ctx.strokeStyle = "#000";
+        ctx.strokeText(this.randomValue, this.x+24, this.y + 200);
 
         // Datos del tutorial
         ctx.fillStyle = "#c2edc0";
@@ -229,19 +249,19 @@ class Enemy{
         // ctx.textAlign = "center"
         if(this.randomValue === 0){
             ctx.fillText("deja todos ", this.x+200, this.y + 230);
-            ctx.fillText("   los interruptures en OFF", this.x+200, this.y + 250);
+            ctx.fillText("        los interruptures en OFF", this.x+200, this.y + 250);
         } else if(this.randomValue === 1){
             ctx.fillText("Pon unicamente el ", this.x+200, this.y + 230);
-            ctx.fillText("    switch que tiene el 1 en ON", this.x+200, this.y + 250);
+            ctx.fillText("         switch que tiene el 1 en ON", this.x+200, this.y + 250);
         } else if(this.randomValue === 2){
             ctx.fillText("Pon unicamente el", this.x+200, this.y + 230);
-            ctx.fillText("    switch que tiene el 2 en ON", this.x+200, this.y + 250);
+            ctx.fillText("         switch que tiene el 2 en ON", this.x+200, this.y + 250);
         } else if(this.randomValue === 3){
             ctx.fillText("Pon el switch que ", this.x+200, this.y + 230);
             ctx.fillText("  tiene el 2 y el 1 en ON", this.x+200, this.y + 250);
         }  else if(this.randomValue === 4){
             ctx.fillText("Pon unicamente el ", this.x+200, this.y + 230);
-            ctx.fillText("    switch que tiene el 4 en ON", this.x+200, this.y + 250);
+            ctx.fillText("         switch que tiene el 4 en ON", this.x+200, this.y + 250);
         }
 
     }
@@ -287,7 +307,7 @@ boton.addEventListener("click", () => {
         rectangle.x = spawn;
     } else {
         console.log("NO iguales");
-        spawn += 30;
+        spawn += 70;
         rectangle.x = spawn;
     }
 });
