--- a/ganaste.html
+++ b/ganaste.html
@@ -52,6 +52,8 @@
         <img src="Assets/perroMov.gif" alt="">
         <h2>Creditos</h2>
         <hr>
+        <p>Juego hecho para la Game Jam 4D4H</p>
+        <hr>
         <h3>Arte Visual</h3>
         <p>Paolette</p>
         <h3>Musica</h3>
@@ -60,7 +62,7 @@
         <p>Hache 3,14</p>
         <hr>
         <br>
-        <a href="index.html">al inicio</a>
+        <h4><a href="index.html">al inicio</a></h4>
     </div>
 </body>
 </html>
