add game over gif

--- a/gameOver.html
+++ b/gameOver.html
@@ -36,11 +36,18 @@
             display: block;
             color: green;
         }
+        img{
+            margin: 0 auto;
+            /* width: 200px; */
+            /* border: 1px solid red; */
+            display: block;
+        }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <h1>Game Over</h1>
+    <!-- <h1>Game Over</h1> -->
+    <img src="Assets/GameOver.gif" alt="">
     <a href="index.html">reiniciar</a>
 </body>
 </html>
