--- a/gameOver.html
+++ b/gameOver.html
@@ -41,6 +41,7 @@
             /* width: 200px; */
             /* border: 1px solid red; */
             display: block;
+            width: 740px;
         }
     </style>
     <title>Document</title>
