--- a/ganaste.html
+++ b/ganaste.html
@@ -42,26 +42,20 @@
         hr{
             width: 50px;
         }
+        img{
+            /* border: 1px solid white; */
+            display: block;
+            /* margin: 0 auto; */
+            width: 740px;
+        }
     </style>
     <title>Document</title>
 </head>
 <body>
     <div class="contenedor">
-        <h1>Ganaste</h1>
-        
-        <img src="Assets/perroMov.gif" alt="">
-        <h2>Creditos</h2>
-        <hr>
-        <p>Juego hecho para la Game Jam 4D4H</p>
-        <hr>
-        <h3>Arte Visual</h3>
-        <p>Paolette</p>
-        <h3>Musica</h3>
-        <p>Juan Felipe Naranjo</p>
-        <h3>Programación & Diseño</h3>
-        <p>Hache 3,14</p>
-        <hr>
-        <br>
+
+        <img src="Assets/Creditos.png" alt="">
+
         <h4><a href="index.html">al inicio</a></h4>
     </div>
 </body>
