--- a/index.html
+++ b/index.html
@@ -47,32 +47,33 @@
             color: green;
             text-align: center;
             display: block;
+            opacity: 0;
 
             border: 5px solid rgb(7, 163, 7);
             border-radius: 25px;
             width: 200px;
             margin: 0 auto;
+            position: absolute;
+            top: 450px;
+            left: 300px;
         }
 
         img{
             /* border: 1px solid white; */
             display: block;
-            text-align: center;
-            margin: 0 auto;
-            width: 500px;
+            /* margin: 0 auto; */
+            width: 740px;
         }
 
-        .switche{
-            color: white;
-        }
+
     </style>
     <title>Document</title>
 </head>
 <body>
     <div class="envoltorio">
-        <h1>Binary Death</h1>
+        <!-- <h1>Binary Death</h1> -->
     </div>
-    <img src="Assets/gatoSlime300.png" alt="">
+    <img src="Assets/Inicio.gif" alt="">
     <!-- <div class="switche">off</div> -->
     <audio src="Sonido/menuDeInicioVer1.mp3" loop autoplay></audio>
     <a href="instruccion.html">iniciar</a>
