--- a/instruccion.html
+++ b/instruccion.html
@@ -35,24 +35,18 @@
             justify-content: space-evenly;
         }
 
-        h1{
-            text-align: center;
+        img{
+            /* border: 1px solid white; */
+            display: block;
+            /* margin: 0 auto; */
+            width: 740px;
         }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <h1>Aviso Importante</h1>
-    <div>
-        <p>
-            En un mundo controlado por los gatos matemáticos, los perritos son torturados hasta el fin para entrenarlos en el sutil arte de las matemáticas con BINARIOS.
-            Tu misión será ayudar a los perritos a alcanzar la libertad moviendo los switches para hacer coincidir el  número en decimal con el binario.
-        </p>
-        <p>
-            Los gatos malvados a primera vista son los despreciables, pero todo tiene una muy buena razon: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus aliquam maiores ut voluptates corrupti est beatae deserunt asperiores esse dolores consectetur consequatur neque libero temporibus, debitis, optio quasi aperiam quos?
-        </p>
+    <img src="Assets/Aviso Importante.png" alt="">
 
-    </div>
     <div class="link-intruccion"> 
         <a href="tutorial.html">Ir a tutorial</a>
         <a href="game.html">saltar</a>
