add new screens and game over adjust text

--- a/gameOver.html
+++ b/gameOver.html
@@ -35,10 +35,17 @@
             text-align: center;
             display: block;
             color: green;
+            border: 10px solid red;
+            width: 200px;
+            height: 30px;
+            position: absolute;
+            left: 270px;
+            top: 410px;
+            opacity: 0;
         }
         img{
-            margin: 0 auto;
-            /* width: 200px; */
+            /* margin: 0 auto; */
+            width: 200px;
             /* border: 1px solid red; */
             display: block;
             width: 740px;
