add button styles

--- a/game.html
+++ b/game.html
@@ -16,12 +16,12 @@
     <canvas id="paredesCanvas"></canvas>
     
     <div class="container-binary">
-        <div id="binary" class="treintaydos">off</div>
-        <div id="binary" class="dieciseis">off</div>
-        <div id="binary" class="ocho">off</div>
-        <div id="binary" class="cuatro">off</div>
-        <div id="binary" class="dos">off</div>
-        <div id="binary" class="uno">off</div>
+        <div id="binary" class="treintaydos off"></div>
+        <div id="binary" class="dieciseis off"></div>
+        <div id="binary" class="ocho off"></div>
+        <div id="binary" class="cuatro off"></div>
+        <div id="binary" class="dos off"></div>
+        <div id="binary" class="uno off"></div>
     </div>
     <div class="container-number">
         <div class="numero">32</div>
@@ -37,5 +37,6 @@
     <a class="gameOver" href="gameOver.html"></a>
     <a class="ganaste" href="ganaste.html"></a>
     <script src="app.js"></script>
+    <div class="div"></div>
 </body>
 </html>
