--- a/gameOver.html
+++ b/gameOver.html
@@ -57,5 +57,10 @@
     <!-- <h1>Game Over</h1> -->
     <img src="Assets/GameOver.gif" alt="">
     <a href="index.html">reiniciar</a>
+    <audio src="Sonido/gameOver.mp3" loop autoplay></audio>
+    <script>
+        const sonido = document.querySelector("audio");
+        sonido.volume = 0.1;
+    </script>
 </body>
 </html>
